# crudgen-django

./: README.md  pyproject.toml
crudgen_django/: apps.py  endpoints.py  fields.py  models.py  serializers.py  services.py
crudgen_django/console/: generate.py
crudgen_django/hacks/: configs.py
easy_rest_django/: apps.py  endpoints.py  fields.py
easy_rest_django/console/: generate.py
tests/: test_easy_rest_django.py
